syntax="proto3";

service LonghornEngineService {
	rpc EngineCreate(EngineCreateRequest) returns (EngineResponse) {}
	rpc EngineDelete(EngineRequest) returns (Empty) {}
	rpc EngineGet(EngineRequest) returns (EngineResponse) {}
	rpc EngineUpgrade(EngineUpgradeRequest) returns (Empty) {}

	rpc FrontendStartCallback(EngineRequest) returns (Empty) {}
	rpc FrontendShutdownCallback(EngineRequest) returns (Empty) {}

	rpc FrontendStart(FrontendStartRequest) returns (Empty) {}
	rpc FrontendShutdown(FrontendShutdownRequest) returns (Empty) {}
}

message EngineSpec {
	string name = 1;
	string volumeName = 2;
	string binary = 3;
	string listen = 4;
	string listen_addr = 5;
	int64 size = 6;
	string frontend = 7;
	repeated string backends = 8;
	repeated string replicas = 9;
}

message EngineStatus {
	string endpoint = 1;
}

message EngineResponse {
	EngineSpec spec = 1;
	EngineStatus status = 2;
}

message EngineCreateRequest {
	EngineSpec spec = 1;
}

message EngineRequest {
	string name = 1;
}

message EngineUpgradeRequest {
	EngineSpec spec = 1;
}

message FrontendStartRequest {
	string name = 1;
	string frontend = 2;
}

message FrontendShutdownRequest {
	string name = 1;
}

message Empty {
}

service LonghornProcessLauncherService {
	rpc ProcessCreate(ProcessCreateRequest) returns (ProcessResponse) {}
	rpc ProcessDelete(ProcessDeleteRequest) returns (ProcessResponse) {}
	rpc ProcessGet(ProcessGetRequest) returns (ProcessResponse) {}
	rpc ProcessList(ProcessListRequest) returns (ProcessListResponse) {}
}

message ProcessSpec {
	string name = 1;
	string binary = 2;
	repeated string args = 3;
	int32 port_count = 4;
	repeated string port_args = 5;
}

message ProcessStatus {
	string state = 1;
	string error_msg = 2;
	int32 port_start = 3;
	int32 port_end = 4;
}

message ProcessCreateRequest {
	ProcessSpec spec = 1;
}

message ProcessDeleteRequest {
	string name = 1;
}

message ProcessGetRequest {
	string name = 1;
}

message ProcessResponse {
	ProcessSpec spec = 1;
	ProcessStatus status = 2;
}

message ProcessListRequest{
}

message ProcessListResponse{
	map<string, ProcessResponse> processes = 1;
}
